<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_green"
    android:layout_height="match_parent"
    tools:context=".Pilih_hotel">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/panah"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bgputih"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="162dp"
        android:layout_height="32dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="133dp"
        android:background="@drawable/button1"
        android:paddingStart="50dp"
        android:paddingTop="4dp"
        android:text="@string/pilih_hotel"
        android:textColor="#FFFF"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="191dp"
        android:background="@drawable/kotak1"
        android:paddingStart="15sp"
        android:paddingTop="11sp"
        android:text="@string/_21_juli_2021"
        android:textColor="#ff000000"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/Surabaya"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="227dp"
        android:text="@string/surabaya"
        android:textColor="#FF000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/hotel"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/hotel"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="510dp"
        android:background="@drawable/hotel"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginTop="670dp"
        android:background="@drawable/button1"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="685dp"
        android:background="@drawable/home"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="685dp"
        android:background="@drawable/search"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pesan"
        android:layout_marginTop="685dp"
        android:layout_marginStart="230dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/orang"
        android:layout_marginTop="685dp"
        android:layout_marginStart="330dp"
        android:contentDescription="@string/todo" />








</RelativeLayout>